--- a/aurisi/data/MainWindow.glade
+++ b/aurisi/data/MainWindow.glade
@@ -2328,6 +2328,19 @@ Author: Michael Oswald
                           </packing>
                         </child>
                         <child>
+                          <object class="GtkButton" id="buttonNCTRSTC">
+                            <property name="label" translatable="yes">Insert NCTRS Template</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
+                        <child>
                           <object class="GtkButton" id="buttonTCClear">
                             <property name="label" translatable="yes">Clear</property>
                             <property name="visible">True</property>
@@ -2337,7 +2350,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">3</property>
+                            <property name="position">4</property>
                           </packing>
                         </child>
                         <child>
@@ -2350,7 +2363,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">4</property>
+                            <property name="position">5</property>
                           </packing>
                         </child>
                         <child>
@@ -2361,7 +2374,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">True</property>
                             <property name="fill">True</property>
-                            <property name="position">5</property>
+                            <property name="position">6</property>
                           </packing>
                         </child>
                         <child>
@@ -2374,7 +2387,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">6</property>
+                            <property name="position">7</property>
                           </packing>
                         </child>
                         <child>
@@ -2387,7 +2400,7 @@ Author: Michael Oswald
                           <packing>
                             <property name="expand">False</property>
                             <property name="fill">True</property>
-                            <property name="position">7</property>
+                            <property name="position">8</property>
                           </packing>
                         </child>
                       </object>
