--- a/aurisi/data/MainWindow.glade
+++ b/aurisi/data/MainWindow.glade
@@ -1462,7 +1462,7 @@ Author: Michael Oswald
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="editable">False</property>
-                                        <property name="width_chars">8</property>
+                                        <property name="width_chars">5</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">7</property>
@@ -1523,19 +1523,10 @@ Author: Michael Oswald
                                       <object class="GtkLabel">
                                         <property name="visible">True</property>
                                         <property name="can_focus">False</property>
+                                        <property name="label" translatable="yes">Gap:</property>
                                       </object>
                                       <packing>
                                         <property name="left_attach">6</property>
-                                        <property name="top_attach">6</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkLabel">
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">False</property>
-                                      </object>
-                                      <packing>
-                                        <property name="left_attach">7</property>
                                         <property name="top_attach">6</property>
                                       </packing>
                                     </child>
@@ -1644,6 +1635,18 @@ Author: Michael Oswald
                                         <property name="left_attach">5</property>
                                         <property name="top_attach">0</property>
                                         <property name="width">3</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkEntry" id="entryTMPUSGap">
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="editable">False</property>
+                                        <property name="xalign">0.5</property>
+                                      </object>
+                                      <packing>
+                                        <property name="left_attach">7</property>
+                                        <property name="top_attach">6</property>
                                       </packing>
                                     </child>
                                   </object>
