--- a/style.css
+++ b/style.css
@@ -1,357 +1,1 @@
-
-@define-color bg_color #e0e0e0; 
-@define-color dark_shadow #9b9b9b;
-@define-color light_shadow #ffffff;
-
-
-window {
-  background-color:@bg_color;
-}
-
-button {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-button:focus {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(0,255,34,0.80);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-button:active {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: @bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  -4px -4px 4px 0 @dark_shadow, 
-               4px 4px 4px 0 @light_shadow;
-}
-
-button.toggle {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: @bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-button.toggle:focus {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: @bg_color;
-  color: #000;
-  border: 1px solid rgba(0,255,34,0.80);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-button.toggle:checked {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: @bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @light_shadow, 
-              -4px -4px 4px 0 @dark_shadow;
-}
-
-button.toggle:active {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: @bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @light_shadow, 
-              -4px -4px 4px 0 @dark_shadow;
-}
-
-
-button.toggle:checked#playtoggle {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: #00BB00;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @light_shadow, 
-              -4px -4px 4px 0 @dark_shadow;
-}
-
-
-#playtoggle:disabled * {
-  background-color: #00BB00;
-  color: #000;
-}
-
-
-button.toggle:checked#stoptoggle {
-  min-height: 11px;
-  min-width: 12px;
-  padding: 3px;
-  margin: 4px;
-  border-radius: 8px;
-  background-color: #ff0000;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @light_shadow, 
-              -4px -4px 4px 0 @dark_shadow;
-}
-
-#stoptoggle:disabled * {
-  background-color: #ff0000;
-  color: #000;
-}
-
-
-checkbutton 
-{ 
-  min-height: 16px;
-  min-width: 14px;
-  margin: 4px;
-  border-radius: 4px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-checkbutton:focus
-{ 
-  min-height: 16px;
-  min-width: 14px;
-  margin: 4px;
-  border-radius: 4px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(0, 255, 34, 0.6);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-checkbutton:disabled
-{ 
-  min-height: 16px;
-  min-width: 14px;
-  margin: 4px;
-  border-radius: 4px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow:  4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-/* checkbutton:checked
-{ 
-  margin: 4px;
-  border-radius: 10px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  box-shadow: -4px -4px 4px 0 @dark_shadow, 
-              4px 4px 4px 0 @light_shadow;
-} */
-
-checkbutton check {
-  margin: 4px;
-  color:rgba(0, 255, 34, 0.8)
-}
-
-
-checkbutton#activecheck label:disabled {
-  color: #000;
-}
-
-
-
-entry 
-{
-  margin: 4px;
-  border-radius: 10px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow: inset 4px 4px 4px 0 @dark_shadow, 
-              inset -4px -4px 4px 0 @light_shadow;
-}
-
-/* notebook > header {
-  background-color: @bg_color;
-  border-radius: 4px;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.80);
-} */
-
-notebook > header > tabs {
-  margin: 4px;
-  background-color: @bg_color;
-  border-radius: 4px;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.60);
-  box-shadow: 2px 2px 4px 0 @dark_shadow, 
-              -2px -2px 4px 0 @light_shadow;
-}
-
-notebook > header > tabs > tab {
-  background-color: @bg_color;
-  border-radius: 4px;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.60);
-  /* box-shadow: 1px 1px 1px 0 @dark_shadow, 
-              -1px -1px 1px 0 @light_shadow; */
-}
-
-notebook > header > tabs > tab:checked {
-  background-color: @bg_color;
-  border-radius: 4px;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow: inset 4px 4px 4px 0 @dark_shadow, 
-              inset -4px -4px 4px 0 @light_shadow;
-}
-
-treeview.view header button {
-  margin: 0px; 
-  min-height: 0;
-  border-radius: 0px;
-  min-height: 0px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.60);
-  box-shadow:  0px 0px 0px 0 @dark_shadow, 
-               0px 0px 0px 0 #ffffff; 
- 
-}
-
-
-entry#error-entry {
-  background-color: #ff0000;
-  color: white;
-  border: 1px solid rgba(255,255,255,0.60);
-  box-shadow: inset -4px -4px 4px 0 #990000, 
-              inset 4px 4px 4px 0 #ffffff;
-}
-
-entry#warn-entry {
-  background-color: #ffff00;
-  color: black;
-  border: 1px solid rgba(255,255,255,0.60);
-  box-shadow: inset -4px -4px 4px 0 #bbbb00, 
-              inset 4px 4px 4px 0 #ffffff;
-}
-
-entry#green-entry {
-  background-color: #00BB00;
-  color: black;
-  border: 1px solid rgba(255,255,255,0.60);
-  box-shadow: inset -4px -4px 4px 0 #008800, 
-              inset 4px 4px 4px 0 #ffffff;
-}
-
-
-frame border {
-  border-style: none;
-
-}
-
-frame {
-  margin: 4px;
-  border-radius: 4px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow: 4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-menubar {
-  margin: 4px;
-  border-radius: 4px;
-  background-color:@bg_color;
-  color: #000;
-  border: 1px solid rgba(255,255,255,0.20);
-  box-shadow: 4px 4px 4px 0 @dark_shadow, 
-              -4px -4px 4px 0 @light_shadow;
-}
-
-
-
-
-textview#description text {
-  margin: 4px;
-  border-radius: 10px;
-  background-color:@bg_color;
-  color: #000;
-  border: none;
-  border-color: rgba(0,0,0,0);
-  box-shadow: inset 4px 4px 4px 0 @dark_shadow, 
-              inset -4px -4px 4px 0 @light_shadow;
-}
-
-textview#description view {
-  margin: 4px;
-  border-radius: 10px;
-  background-color:@bg_color;
-  color: #000;
-  border: none;
-  border-color: rgba(0,0,0,0);
-  box-shadow: inset 4px 4px 4px 0 @dark_shadow, 
-              inset -4px -4px 4px 0 @light_shadow;
-}
-
-
-textview {
-  font-family: monospace;
-}
-
-.view:disabled {
-  border: none;
-}
-
-scrolledwindow {
-  margin: 4px;
-  border-radius: 10px;
-  background-color:@bg_color;
-  color: #000;
-  border: none;
-  border-color: rgba(0,0,0,0);
-  box-shadow: inset 4px 4px 4px 0 @dark_shadow, 
-              inset -4px -4px 4px 0 @light_shadow;
-}
+aurisi/data/style.css
